# contracts

./: .gitignore  Cargo.toml  README.md  package.json
contract/: Cargo.toml  README.md
contract/src/: enumeration.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  royalty.rs
elision-options/: Cargo.toml
elision-options/src/: internal.rs  lib.rs  metadata.rs  nft_core.rs
elision-pool/: Cargo.toml  README.md
elision-pool/src/: external.rs  lib.rs
elx-token/: Cargo.toml  build.sh
elx-token/src/: events.rs  lib.rs  metadata.rs
